--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </ul>
       </div>
       <form id="contactForm"
-      action="https://formsubmit.co/timeofmahakala@gmail.com"
+      action="https://formsubmit.co/2a101668b595d72eea66c5282b29b946"
       method="POST"
       class="rounded-2xl border border-white/10 bg-white/5 p-5 space-y-3">
 
