--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>위상조율 연구소 — 재건 판</title>
   <meta name="description" content="작용성·위상조율 기반 자율철학 연구 거점 — 재건 위원회 운영">
+  <link rel="icon" type="image/png" href="logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
    :root{
