--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
     <!-- Optional: embedded video (replace VIDEO_ID) -->
     <div class="max-w-6xl mx-auto px-4 pb-10">
       <div class="rounded-2xl overflow-hidden border border-white/10 bg-black/40">
-        <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/VIDEO_ID?rel=0&modestbranding=1&controls=1"
+        <iframe class="w-full aspect-video" src="https://youtu.be/g_KU1lhmfBc"
           title="의례 기록 — 마하칼라" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <div class="px-4 py-2 text-[11px] text-white/60 border-t border-white/10">의례 기록 1/108 — 출처 불명</div>
+        <div class="px-4 py-2 text-[11px] text-white/60 border-t border-white/10">복원본 1/108 — 출처 불명</div>
       </div>
     </div>
   </section>
