--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <!-- Optional: embedded video (replace VIDEO_ID) -->
     <div class="max-w-6xl mx-auto px-4 pb-10">
       <div class="rounded-2xl overflow-hidden border border-white/10 bg-black/40">
-        <iframe class="w-full aspect-video" src="https://youtu.be/g_KU1lhmfBc"
+        <iframe class="w-full aspect-video" src="https://www.youtube.com/watch?v=g_KU1lhmfBc"
           title="의례 기록 — 마하칼라" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
