--- a/index.html
+++ b/index.html
@@ -176,10 +176,15 @@
     <!-- Optional: embedded video (replace VIDEO_ID) -->
     <div class="max-w-6xl mx-auto px-4 pb-10">
       <div class="rounded-2xl overflow-hidden border border-white/10 bg-black/40">
-        <iframe class="w-full aspect-video" src="https://www.youtube.com/watch?v=g_KU1lhmfBc"
-          title="의례 기록 — 마하칼라" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe
+  class="w-full aspect-video"
+  src="https://www.youtube.com/embed/g_KU1lhmfBc?rel=0&modestbranding=1&playsinline=1"
+  title="의례 기록 — 마하칼라"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen
+  loading="lazy"></iframe>
         <div class="px-4 py-2 text-[11px] text-white/60 border-t border-white/10">복원본 1/108 — 출처 불명</div>
       </div>
     </div>
