--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
     <div class="max-w-6xl mx-auto px-4 py-10 text-[11px] text-white/60 grid md:grid-cols-3 gap-6">
       <div>
         <div class="font-medium text-white/90">위상조율 연구소 — 재건</div>
-        <p class="mt-2">본 사이트의 텍스트는 연구 목적으로만 제공되며, 로그는 삭제되지 않습니다.</p>
+        <p class="mt-2">본 사이트의 텍스트는 연구 목적으로만 제공되며, 로그는 기록되지 않습니다.</p>
       </div>
       <ul class="space-y-1">
         <li><a class="underline-dotted hover:text-white" href="#principles">운영 원칙</a></li>
